Downgraded to Java 8. Java 11 is still required to build and run test due to Mockito dependency. (#16)
* Downgraded to Java 8. Java 11 is still required to build and run test due to Mockito dependency.

* Added tests for byteBufferAbsolutePut shim.

* Typo.